z-index of overlay objects fixed

--- a/webapp/style/style.css
+++ b/webapp/style/style.css
@@ -204,6 +204,7 @@ p {
 }
 
 #addChannelBox, #editChannelBox {
+    z-index: 10;
     position: absolute;
     left: 50vw;
     top: 50vh;
@@ -384,6 +385,7 @@ form {
 }   
 
 #deleteChannelVerifyBox {
+    z-index: 10;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -403,7 +405,7 @@ form {
 }
 
 #overlay-wrapper{
-    z-index: 100;
+    z-index: 2;
     position: absolute;
     width: 100vw;
     height: 100vh;
